--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,10 @@
     padding-right: 0;
     background-color: inherit;
 
-    h1 {
+    .title {
+        display: flex;
+        gap: .5rem;
+        align-items: center;
         margin-bottom: 0;
         padding-right: .5rem;
     }
